[gd_scene load_steps=17 format=3 uid="uid://cd7vqxtxd3yw0"]

[ext_resource type="PackedScene" uid="uid://c45iu7mohv4ep" path="res://Scenes/GameOverScreen.tscn" id="1_6bp64"]
[ext_resource type="Script" uid="uid://b50qvqiqe6dkv" path="res://Scripts/Global.gd" id="1_344ge"]
[ext_resource type="PackedScene" uid="uid://f5la80dm7366" path="res://Scenes/image_gen.tscn" id="2_bo1nx"]
[ext_resource type="AudioStream" uid="uid://dcs3l1degc3n0" path="res://Sounds/ding-402325.mp3" id="3_8gbba"]
[ext_resource type="Script" uid="uid://cmqk727iwa1q3" path="res://Scripts/buttons/texture_button_3x.gd" id="4_jjvhh"]
[ext_resource type="PackedScene" uid="uid://dvjh8x7rais2k" path="res://Scenes/Buttons/texture_button3X.tscn" id="4_kry3j"]
[ext_resource type="Script" uid="uid://1uxl0v7m0gv8" path="res://Scripts/buttons/texture_button_5x.gd" id="5_kry3j"]
[ext_resource type="Script" uid="uid://wugmvkxxdy8w" path="res://Scripts/buttons/texture_button_10x.gd" id="6_21xkr"]
[ext_resource type="PackedScene" uid="uid://beb50ku0em3x2" path="res://Scenes/Buttons/BasicButton.tscn" id="9_ynf5e"]
[ext_resource type="Script" uid="uid://cxgsfagukgtwt" path="res://Scripts/trinkets_icons.gd" id="10_d1ilt"]
[ext_resource type="Texture2D" uid="uid://c3i7dlhquhe36" path="res://Assets/icon.svg" id="11_6iyac"]
[ext_resource type="Script" uid="uid://u4hafmwkbgkk" path="res://Scripts/bonus_menu_bg.gd" id="12_6iyac"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjgbg"]
size = Vector2(38, 356)

[sub_resource type="LabelSettings" id="LabelSettings_bo1nx"]
font_size = 39
font_color = Color(1, 1, 0.25882354, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2.5, 2.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d1ilt"]
size = Vector2(120, 120)

[sub_resource type="LabelSettings" id="LabelSettings_d1ilt"]
font_size = 20

[node name="Main" type="Node2D"]
script = ExtResource("1_344ge")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.89804304, 0.9666676)
zoom = Vector2(0.835, 0.835)

[node name="GameOverScreen" parent="." instance=ExtResource("1_6bp64")]
unique_name_in_owner = true
visible = false
offset_left = -759.0
offset_top = -464.0
offset_right = 741.0
offset_bottom = 436.0

[node name="HandleBar" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="HandleBarArea" type="CollisionShape2D" parent="HandleBar"]
top_level = true
z_index = 1
position = Vector2(490, -75)
shape = SubResource("RectangleShape2D_jjgbg")

[node name="MainScreen" type="ColorRect" parent="."]
z_index = 1
offset_left = -356.0
offset_top = -281.0
offset_right = 414.0
offset_bottom = 269.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="InnerScreen" type="ColorRect" parent="MainScreen"]
z_index = 1
layout_mode = 0
offset_left = 43.0
offset_top = 40.0
offset_right = 727.0
offset_bottom = 510.0
mouse_filter = 2
color = Color(0.69965345, 0.69965345, 0.69965345, 1)

[node name="ColorRect" type="ColorRect" parent="MainScreen"]
z_index = 3
layout_mode = 0
offset_top = 549.0
offset_right = 17.0
offset_bottom = 670.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="MainScreen"]
z_index = 3
layout_mode = 0
offset_left = 753.0
offset_top = 550.0
offset_right = 770.0
offset_bottom = 671.0
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="MainScreen"]
z_index = 3
layout_mode = 0
offset_top = 655.0
offset_right = 770.0
offset_bottom = 671.0
color = Color(0, 0, 0, 1)

[node name="HandleTop" type="ColorRect" parent="."]
z_index = 1
offset_left = 525.3002
offset_top = -263.50027
offset_right = 580.3008
offset_bottom = -192.08487
rotation = 1.5707964
mouse_filter = 2
color = Color(0.5882353, 0, 0, 1)

[node name="HandleMid" type="ColorRect" parent="HandleTop"]
z_index = -1
layout_mode = 0
offset_left = 41.500275
offset_top = 55.30017
offset_right = 81.500275
offset_bottom = 383.30017
rotation = -1.5707964
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="HandleBottom" type="ColorRect" parent="HandleTop"]
z_index = -1
layout_mode = 0
offset_left = 329.50027
offset_top = 54.60968
offset_right = 369.50027
offset_bottom = 116.25818
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Hiders" type="Node" parent="."]

[node name="HiderTop" type="ColorRect" parent="Hiders"]
z_index = 3
offset_left = -356.0
offset_top = -323.0
offset_right = 414.0
offset_bottom = -281.0
color = Color(0.25202748, 0.2520277, 0.25202763, 1)

[node name="HiderTop2" type="ColorRect" parent="Hiders"]
modulate = Color(1, 1, 1, 0)
z_index = 3
offset_left = -356.0
offset_top = -401.475
offset_right = 414.0
offset_bottom = -322.475
color = Color(0.25202748, 0.2520277, 0.25202763, 1)

[node name="HiderBottom" type="ColorRect" parent="Hiders"]
z_index = 3
offset_left = -356.0
offset_top = 269.0
offset_right = 414.0
offset_bottom = 345.43588
scale = Vector2(1, 1.56)
color = Color(0.28485027, 0.28485027, 0.28485027, 1)

[node name="Image Gen" parent="." instance=ExtResource("2_bo1nx")]
unique_name_in_owner = true
z_index = 1
offset_left = -269.0
offset_top = -84.0
offset_right = -269.0
offset_bottom = -84.0

[node name="Sounds" type="Node" parent="."]

[node name="WinningDing" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_8gbba")
volume_db = -5.0

[node name="ButtonsMulti" type="Node" parent="."]

[node name="TextureButton" parent="ButtonsMulti" instance=ExtResource("4_kry3j")]
offset_left = -217.00002
offset_top = 290.00003
offset_right = -143.00002
offset_bottom = 344.00003
script = ExtResource("4_jjvhh")

[node name="TextureButton2" parent="ButtonsMulti" instance=ExtResource("4_kry3j")]
offset_left = -25.0
offset_top = 290.00003
offset_right = 49.0
offset_bottom = 344.00003
script = ExtResource("5_kry3j")

[node name="TextureButton3" parent="ButtonsMulti" instance=ExtResource("4_kry3j")]
offset_left = 175.0
offset_top = 290.00003
offset_right = 249.0
offset_bottom = 344.00003
script = ExtResource("6_21xkr")

[node name="InterfaceLabels" type="Node" parent="."]

[node name="Multiplier+Cost1" type="Label" parent="InterfaceLabels"]
unique_name_in_owner = true
z_index = 3
offset_left = -270.0
offset_top = -195.0
offset_right = 22.0
offset_bottom = -140.5625
theme_override_colors/font_color = Color(1, 1, 0.25882354, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "MULTIPLIER: 1X"
label_settings = SubResource("LabelSettings_bo1nx")
uppercase = true

[node name="JackpotAmount" type="RichTextLabel" parent="InterfaceLabels"]
unique_name_in_owner = true
z_index = 3
offset_left = -270.0
offset_top = -355.0
offset_right = 84.0
offset_bottom = -300.5625
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 39
bbcode_enabled = true
text = "[color=yellow]JACKPOT:"
scroll_active = false

[node name="Money" type="Label" parent="InterfaceLabels"]
unique_name_in_owner = true
z_index = 3
offset_left = -270.0
offset_top = 150.0
offset_right = -117.0
offset_bottom = 204.4375
theme_override_colors/font_color = Color(1, 1, 0.25882354, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Money:"
label_settings = SubResource("LabelSettings_bo1nx")
uppercase = true

[node name="Won" type="Label" parent="InterfaceLabels"]
unique_name_in_owner = true
z_index = 3
offset_left = 110.0
offset_top = 150.0
offset_right = 155.0
offset_bottom = 173.0
scale = Vector2(2.5, 2.5)
theme_override_colors/font_color = Color(1, 1, 0.25882354, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "WON:"

[node name="SpinCost" type="Label" parent="InterfaceLabels"]
unique_name_in_owner = true
z_index = 3
offset_left = 110.0
offset_top = -195.0
offset_right = 155.0
offset_bottom = -172.0
scale = Vector2(2.5, 2.5)
theme_override_colors/font_color = Color(1, 1, 0.25882354, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "COST:"

[node name="Trinkets" type="Label" parent="InterfaceLabels"]
unique_name_in_owner = true
z_index = 3
offset_left = -662.0
offset_top = -195.0
offset_right = -370.0
offset_bottom = -140.5625
theme_override_colors/font_color = Color(1, 1, 0.25882354, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Trinkets:"
label_settings = SubResource("LabelSettings_bo1nx")
uppercase = true

[node name="FreeSpins" type="Label" parent="InterfaceLabels"]
unique_name_in_owner = true
z_index = 3
offset_left = 419.0
offset_top = 327.6667
offset_right = 503.0
offset_bottom = 350.00003
scale = Vector2(2.5, 2.5)
theme_override_colors/font_color = Color(1, 1, 0.25882354, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Free Spins:"

[node name="MenuButtons" type="Node" parent="."]

[node name="MenuButton1" parent="MenuButtons" instance=ExtResource("9_ynf5e")]
offset_left = -572.99994
offset_top = 252.0
offset_right = -500.99994
offset_bottom = 305.0

[node name="AutoPlayButton" parent="." instance=ExtResource("9_ynf5e")]
offset_left = 436.0
offset_top = 158.0
offset_right = 508.31995
offset_bottom = 211.0
toggle_mode = true

[node name="Timer" type="Timer" parent="AutoPlayButton"]
wait_time = 0.5
autostart = true

[node name="BonusSpinsButton" parent="." instance=ExtResource("9_ynf5e")]
offset_left = 435.00006
offset_top = 247.0
offset_right = 509.58
offset_bottom = 300.0

[node name="BasicLabel" parent="BonusSpinsButton" index="0"]
offset_left = -3.390027
offset_top = 5.8094883
offset_right = 77.40489
offset_bottom = 28.759506
scale = Vector2(1, 1.0580949)

[node name="TrinketsIcons" type="Node" parent="."]
script = ExtResource("10_d1ilt")

[node name="DiamondToken" type="Sprite2D" parent="TrinketsIcons"]
position = Vector2(-623, -98)
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_6iyac")

[node name="Area2D" type="Area2D" parent="TrinketsIcons/DiamondToken"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrinketsIcons/DiamondToken/Area2D"]
shape = SubResource("RectangleShape2D_d1ilt")

[node name="Description" type="Label" parent="TrinketsIcons"]
offset_left = -640.0
offset_top = -318.0
offset_right = -420.0
offset_bottom = -251.0
text = "description"
label_settings = SubResource("LabelSettings_d1ilt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BonusMenuBG" type="ColorRect" parent="."]
visible = false
z_index = 15
clip_contents = true
offset_left = -816.0
offset_top = -478.0
offset_right = 798.0
offset_bottom = 480.0
color = Color(0.3019608, 0.3019608, 0.3019608, 0.8039216)
script = ExtResource("12_6iyac")

[node name="BackButton" parent="BonusMenuBG" instance=ExtResource("9_ynf5e")]
z_index = 15
layout_mode = 0
offset_left = 641.0
offset_top = 645.0
offset_right = 713.31995
offset_bottom = 698.0

[node name="BuyButton" parent="BonusMenuBG" instance=ExtResource("9_ynf5e")]
z_index = 15
layout_mode = 0
offset_left = 785.0
offset_top = 644.99994
offset_right = 857.31995
offset_bottom = 697.99994

[node name="Bonus1" parent="BonusMenuBG" instance=ExtResource("9_ynf5e")]
layout_mode = 0
offset_left = 556.0
offset_top = 352.0
offset_right = 631.0
offset_bottom = 407.0
scale = Vector2(1.44, 1.56)
toggle_mode = true

[node name="Bonus2" parent="BonusMenuBG" instance=ExtResource("9_ynf5e")]
layout_mode = 0
offset_left = 763.9998
offset_top = 352.0
offset_right = 838.9998
offset_bottom = 407.0
scale = Vector2(1.44, 1.56)
toggle_mode = true

[node name="Bonus3" parent="BonusMenuBG" instance=ExtResource("9_ynf5e")]
layout_mode = 0
offset_left = 963.9999
offset_top = 352.0
offset_right = 1038.9999
offset_bottom = 407.0
scale = Vector2(1.44, 1.56)
toggle_mode = true

[connection signal="input_event" from="HandleBar" to="." method="_on_handle_bar_input_event"]
[connection signal="toggled" from="ButtonsMulti/TextureButton" to="Image Gen" method="_on_texture_button_toggled"]
[connection signal="toggled" from="ButtonsMulti/TextureButton2" to="Image Gen" method="_on_texture_button_2_toggled"]
[connection signal="toggled" from="ButtonsMulti/TextureButton3" to="Image Gen" method="_on_texture_button_3_toggled"]
[connection signal="pressed" from="MenuButtons/MenuButton1" to="Image Gen" method="_on_menu_button_1_pressed"]
[connection signal="toggled" from="AutoPlayButton" to="Image Gen" method="_on_auto_play_button_toggled"]
[connection signal="timeout" from="AutoPlayButton/Timer" to="Image Gen" method="_on_timer_timeout"]
[connection signal="pressed" from="BonusSpinsButton" to="Image Gen" method="_on_bonus_spins_button_pressed"]
[connection signal="mouse_shape_entered" from="TrinketsIcons/DiamondToken/Area2D" to="TrinketsIcons" method="_on_area_2d_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="TrinketsIcons/DiamondToken/Area2D" to="TrinketsIcons" method="_on_area_2d_mouse_shape_exited"]
[connection signal="pressed" from="BonusMenuBG/BackButton" to="BonusMenuBG" method="_on_back_button_pressed"]
[connection signal="pressed" from="BonusMenuBG/BuyButton" to="BonusMenuBG" method="_on_buy_button_pressed"]
[connection signal="toggled" from="BonusMenuBG/Bonus1" to="BonusMenuBG" method="_on_bonus_1_toggled"]
[connection signal="toggled" from="BonusMenuBG/Bonus2" to="BonusMenuBG" method="_on_bonus_2_toggled"]
[connection signal="toggled" from="BonusMenuBG/Bonus3" to="BonusMenuBG" method="_on_bonus_3_toggled"]

[editable path="AutoPlayButton"]
[editable path="BonusSpinsButton"]
